--- a/personel-takip.html
+++ b/personel-takip.html
@@ -18,7 +18,9 @@
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/core.js' %}"></script>
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
-
+<script>
+    const today = new Date(); // Bugünün tarihi
+</script>
 </head>
 
 <body class="header-vertical">
