--- a/aidat-kullanıcı.html
+++ b/aidat-kullanıcı.html
@@ -179,7 +179,7 @@
                       Dekont yüklendi, onaylama bekleniyor
                     {% endif %}
                   {% else %}
-                    <a href="{{ a.dekont.url }}" target="_blank">  <button class="btn btn-success btn-sm" disabled>
+                    <a href="{{ a.dekont.url }}" target="_blank">  <button class="btn btn-success btn-sm">
                       Dekont Görüntüle
                     </button></a>
                   {% endif %}
