--- a/duyuru.html
+++ b/duyuru.html
@@ -28,8 +28,7 @@
 
     <!-- Logo -->
     <a href="index-dark.html" class="logo">
-        <a href="/" class="logo mr-15"><img src="{% static 'img/logo-light.svg' %}" height="80" alt=""></a>
-
+      <img src="{% static 'img/logo-light.svg' %}" alt="">
     </a>
 
     <!-- Navigation -->
@@ -41,7 +40,7 @@
                     <li><a href="/aidat-takip/" class="" style="pointer-events: auto;"><i class="li-moneybag"></i> Aidat Takibi</a></li>
                     <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
                     <li><a href="/personel-takip/" class="" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
-                    <li><a href="/istek_sikayet/"><i class="li-email"></i>İstek & Şikayet</a></li>
+                    <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
                     <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
         </ul>
       </div>  
