--- a/aidat-kullanıcı.html
+++ b/aidat-kullanıcı.html
@@ -115,10 +115,9 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-      
-  <a href="{% url 'panel_sakin_static' %}" class="logo mr-15">
-      <img src="{% static 'img/logo-light.svg' %}" alt="Logo">
-  </a>
+    <a href="index-dark.html" class="logo"  style="padding: 0;">
+      <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
+    </a>
 
     <!-- Navigation -->
     <nav id="main-menu">
