--- a/panel-personel.html
+++ b/panel-personel.html
@@ -44,8 +44,8 @@
 
     <!-- Header -->
     <header id="header" class="bg-dark dark">
-        <a href="index-dark.html" class="logo">
-            <img src="{% static 'img/logo-light.svg' %}" alt="">
+        <a href="index-dark.html" class="logo"  style="padding: 0;">
+            <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
         </a>
 
         <!-- Navigation -->
@@ -101,7 +101,7 @@
                         <div class="card feature text-center animated" data-animation="fadeIn">
                         <span class="icon icon-primary icon-lg"><i class="li-calendar" style="font-size: 40px;"></i></span>
                         <h5 class="mb-0">Görev Bilgilendirmesi</h5>
-                        <span class="text-muted">Günlük görevlerinizi sistem üzerinden kontrol etmeyi unutmayın.</span>
+                        <span class="text-muted">Günlük görevlerinizi sistem üzerinden kontrol etmeyi ve tamamladığınız görevleri işaretlemeyi unutmayın.</span>
                         </div>
                     </div>
                     <div class="col-md-6 mb-4">
