--- a/personel-takip.html
+++ b/personel-takip.html
@@ -36,8 +36,8 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo">
-        <img src="{% static 'img/logo-light.svg' %}" alt="">
+    <a href="index-dark.html" class="logo"  style="padding: 0;">
+        <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
     <!-- Navigation -->
