--- a/duyuru_p.html
+++ b/duyuru_p.html
@@ -37,8 +37,8 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="/" class="logo">
-      <img src="{% static 'img/logo-light.svg' %}" alt="">
+    <a href="index-dark.html" class="logo"  style="padding: 0;">
+      <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
     <!-- Navigation -->
