--- a/istek_sikayet_k.html
+++ b/istek_sikayet_k.html
@@ -64,16 +64,15 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo">
-        
-        <img src="{% static 'img/logo-light.svg' %}" alt="">
+    <a href="index-dark.html" class="logo"  style="padding: 0;">
+      <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
     <!-- Navigation -->
     <nav id="main-menu">
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
-          <li><a href="/panel-sakin.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
+          <li><a href="/panel-sakin.html"><i class="li-home"></i>Ana Sayfa</a></li>
           <li><a href="/sakin-aidat-takip/"><i class="li-moneybag"></i>Aidat Takibi</a></li>
           <li><a href="{% url 'duyuru_k' %}"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="/randevu/"><i class="li-clock"></i>Randevu Alma</a></li>
