--- a/panel-sakin.html
+++ b/panel-sakin.html
@@ -36,8 +36,8 @@
     </div>
 
     <header id="header" class="bg-dark dark">
-        <a href="/index-dark.html" class="logo">
-          <img src="{% static 'img/logo-light.svg' %}" alt="">
+        <a href="index-dark.html" class="logo"  style="padding: 0;">
+            <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
         </a>
         <nav id="main-menu">
             <div class="nav-wrapper">
