--- a/randevu.html
+++ b/randevu.html
@@ -57,8 +57,8 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo">
-        <img src="img/logo-light.svg" alt="">
+    <a href="index-dark.html" class="logo"  style="padding: 0;">
+      <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
     <!-- Navigation -->
