--- a/index-dark.html
+++ b/index-dark.html
@@ -45,7 +45,7 @@
         font-size: 2.5rem;
         font-weight: 700;
         margin-bottom: 2rem;
-        background: linear-gradient(45deg, #00ff87, #60efff);
+        background: white;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         text-align: center;
