--- a/istek_sikayet_k.html
+++ b/istek_sikayet_k.html
@@ -9,14 +9,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Skill - Modern &amp; Creative HTML5 Template</title>
-
+<title>Site Yönetim Sistemi</title>
 <!-- Favicons -->
-<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
-<link rel="apple-touch-icon" href="{% static 'img/favicon_60x60.png' %}">
-<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon_76x76.png' %}">
-<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon_120x120.png' %}">
-<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon_152x152.png' %}">
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
 
 <style>
     label {
@@ -64,7 +63,7 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo"  style="padding: 0;">
+    <a href="/panel-sakin.html" class="logo"  style="padding: 0;">
       <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
@@ -148,7 +147,6 @@
 <!-- Mobile Navigation Toggle -->
 <div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
 
-<!-- JS Libraries -->
 <!-- JS Libraries -->
 <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
 
