--- a/aidat-kullanıcı.html
+++ b/aidat-kullanıcı.html
@@ -8,31 +8,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Skill - Modern &amp; Creative HTML5 Template</title>
-
+<title>Site Yönetim Sistemi</title>
 <!-- Favicons -->
-
-<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
-<link rel="apple-touch-icon" href="{% static 'img/favicon_60x60.png' %}">
-<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon_76x76.png' %}">
-<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon_120x120.png' %}">
-<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon_152x152.png' %}">
-
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
     
-    <!-- Google Web Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
-    
-    <!-- CSS Styles -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link id="theme" rel="stylesheet" href="{% static 'css/themes/theme-green.min.css' %}" />
-    <style>
-      .btn-sm {
-        padding: 0.55rem 0.8rem;
-        font-size: 0.65rem;
-      }
-        /* Modal arkaplanı */
+<!-- Google Web Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
+
+<!-- CSS Styles -->
+<link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+<link id="theme" rel="stylesheet" href="{% static 'css/themes/theme-green.min.css' %}" />
+<style>
+  .btn-sm {
+    padding: 0.55rem 0.8rem;
+    font-size: 0.65rem;
+  }
+    /* Modal arkaplanı */
   .modal {
     position: fixed;
     z-index: 999;
@@ -115,7 +110,7 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo"  style="padding: 0;">
+    <a href="/panel-sakin.html" class="logo"  style="padding: 0;">
       <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
@@ -247,17 +242,17 @@
       });
   </script>
 
-<!-- Mobile Navigation Toggle -->
-<div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
+  <!-- Mobile Navigation Toggle -->
+  <div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
 
-<!-- JS Libraries -->
-<script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+  <!-- JS Libraries -->
+  <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
 
-<!-- JS Plugins -->
-<script src="{% static 'js/plugins.js' %}"></script>
+  <!-- JS Plugins -->
+  <script src="{% static 'js/plugins.js' %}"></script>
 
-<!-- JS Core -->
-<script src="{% static 'js/core.js' %}"></script>
+  <!-- JS Core -->
+  <script src="{% static 'js/core.js' %}"></script>
 
 
 </body>
