--- a/daire-info.html
+++ b/daire-info.html
@@ -8,14 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Skill - Modern &amp; Creative HTML5 Template</title>
-
+<title>Site Yönetim Sistemi</title>
 <!-- Favicons -->
-<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
-<link rel="apple-touch-icon" href="{% static 'img/favicon_60x60.png' %}">
-<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon_76x76.png' %}">
-<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon_120x120.png' %}">
-<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon_152x152.png' %}">
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
 
 <!-- Google Web Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
@@ -40,7 +39,7 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo"  style="padding: 0;">
+    <a href="/panel-yonetici.html" class="logo"  style="padding: 0;">
         <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
@@ -48,7 +47,7 @@
     <nav id="main-menu">
         <div class="nav-wrapper">
           <ul class="nav nav-primary">
-              <li><a href="panel-yonetici.html" class=""><i class="li-home"></i>Ana Sayfa</a></li>
+              <li><a href="/panel-yonetici.html" class=""><i class="li-home"></i>Ana Sayfa</a></li>
               <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
               <li><a href="/aidat-takip/" class="" style="pointer-events: auto;"><i class="li-moneybag"></i> Aidat Takibi</a></li>
               <li><a href="/duyurular/" class="" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
