--- a/duyuru.html
+++ b/duyuru.html
@@ -6,9 +6,17 @@
 <!-- Meta -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yönetici Paneli</title>
+
+<!-- Title -->
+<title>Site Yönetim Sistemi</title>
+<!-- Favicons -->
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
+
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
-<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
 <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 <link id="theme" rel="stylesheet" href="{% static 'css/themes/theme-green.min.css' %}" />
 
@@ -27,7 +35,7 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo"  style="padding: 0;">
+    <a href="/panel-yonetici.html" class="logo"  style="padding: 0;">
       <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
@@ -35,13 +43,13 @@
     <nav id="main-menu">
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
-          <li><a href="panel-yonetici.html" class=""><i class="li-home"></i>Ana Sayfa</a></li>
-                    <li><a href="/daireler/" class="" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
-                    <li><a href="/aidat-takip/" class="" style="pointer-events: auto;"><i class="li-moneybag"></i> Aidat Takibi</a></li>
-                    <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
-                    <li><a href="/personel-takip/" class="" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
-                    <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
-                    <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
+          <li><a href="/panel-yonetici.html" class=""><i class="li-home"></i>Ana Sayfa</a></li>
+          <li><a href="/daireler/" class="" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
+          <li><a href="/aidat-takip/" class="" style="pointer-events: auto;"><i class="li-moneybag"></i> Aidat Takibi</a></li>
+          <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
+          <li><a href="/personel-takip/" class="" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
+          <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
+          <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
         </ul>
       </div>  
       <span class="selector"></span>
