--- a/duyuru_k.html
+++ b/duyuru_k.html
@@ -9,15 +9,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Skill - Modern &amp; Creative HTML5 Template</title>
-
-
+<title>Site Yönetim Sistemi</title>
 <!-- Favicons -->
-<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
-<link rel="apple-touch-icon" href="{% static 'img/favicon_60x60.png' %}">
-<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon_76x76.png' %}">
-<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon_120x120.png' %}">
-<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon_152x152.png' %}">
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
 
 <!-- Google Web Fonts (Bu kalsın çünkü dış bağlantı) -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
@@ -43,7 +41,7 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo"  style="padding: 0;">
+    <a href="/panel-sakin.html" class="logo"  style="padding: 0;">
       <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
@@ -51,7 +49,7 @@
     <nav id="main-menu">
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
-            <li><a href="panel-sakin.html"><i class="li-home"></i>Ana Sayfa</a></li>
+            <li><a href="/panel-sakin.html"><i class="li-home"></i>Ana Sayfa</a></li>
             <li><a href="/sakin-aidat-takip/"><i class="li-moneybag"></i>Aidat Takibi</a></li>
             <li><a href="{% url 'duyuru_k' %}" class="active"><i class="li-bell"></i>Duyurular</a></li>
             <li><a href="/randevu/"><i class="li-clock"></i>Randevu Alma</a></li>
