--- a/istek_sikayet_p.html
+++ b/istek_sikayet_p.html
@@ -8,10 +8,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Skill - Modern &amp; Creative HTML5 Template</title>
-
+<title>Site Yönetim Sistemi</title>
 <!-- Favicons -->
-<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
+
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <link id="theme" rel="stylesheet" href="{% static 'css/themes/theme-green.min.css' %}">
 <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
@@ -65,7 +69,7 @@
 <header id="header" class="bg-dark dark">
 
     <!-- Logo -->
-    <a href="index-dark.html" class="logo"  style="padding: 0;">
+    <a href="/panel-personel.html" class="logo"  style="padding: 0;">
       <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
     </a>
 
@@ -73,7 +77,7 @@
     <nav id="main-menu">
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
-          <li><a href="panel-personel.html"><i class="li-home"></i>Ana Sayfa</a></li>
+          <li><a href="/panel-personel.html"><i class="li-home"></i>Ana Sayfa</a></li>
           <li><a href="/gorevlerim/"><i class="li-calendar"></i>Görevler</a></li>
           <li><a href="/duyuru_p/"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="/istek_sikayet_personel/" class="active"><i class="li-email"></i>İstek & Şikayet</a></li>
