--- a/panel-personel.html
+++ b/panel-personel.html
@@ -8,14 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Skill - Modern &amp; Creative HTML5 Template</title>
-
+<title>Site Yönetim Sistemi</title>
 <!-- Favicons -->
-<link rel="shortcut icon" href="img/favicon.png">
-<link rel="apple-touch-icon" href="img/favicon_60x60.png">
-<link rel="apple-touch-icon" sizes="76x76" href="img/favicon_76x76.png">
-<link rel="apple-touch-icon" sizes="120x120" href="img/favicon_120x120.png">
-<link rel="apple-touch-icon" sizes="152x152" href="img/favicon_152x152.png">
+<link rel="shortcut icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon1.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon1.png' %}">
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
 
@@ -44,7 +43,7 @@
 
     <!-- Header -->
     <header id="header" class="bg-dark dark">
-        <a href="index-dark.html" class="logo"  style="padding: 0;">
+        <a class="logo"  style="padding: 0;">
             <img src="{% static 'img/logo.png' %}" style="max-height: 220px;">
         </a>
 
@@ -130,7 +129,6 @@
         </section>
     </div>
     <!-- Content / End -->
-
 
     <!-- Mobile Navigation Toggle -->
     <div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
