onaylanan odemeden sonra sayfa guncelleniyor

--- a/aidat-takip.html
+++ b/aidat-takip.html
@@ -106,6 +106,7 @@
                   <h5>Ödenmemiş Aidatlar</h5>
                   </div>
                   <div class="card-body">
+
                   {% if unpaid %}
                   <table class="table table-bordered table-striped">
                       <thead>
@@ -192,6 +193,12 @@
                       <p>Tüm aidatlar ödenmiş.</p>
                   {% endif %}
                   </div>
+                  <!--odenmiş aidatları gosterme -->
+                  <div class="card-header">
+                    <h5>Ödenmiş Aidatlar</h5>
+                    
+
+
               </div>
 
       </section>
